[JBIDE-7594] * added instance related job & scheduling rule (blocks instance jobs on same instance and superclass jobs on same cloud & element) * corrected scheduling rule to block superclass scheduling rule on the same cloud * added scheduling element that reflects cloud properties being processed (instances, images, realms, profiles) * switched RefreshImagesHandler and RefreshInstancesHandler to AbstractCloudElementJob to have consistent blocking with all other jobs * switched DestroyInstanceHandler to DestroyInstanceJob to have consistent blocking with all other jobs * switched AbstractInstanceHandler to InstanceActionJob to have consistent blocking with all other jobs * switched InstancesCategoryItem to AbstractCloudElementJob to have consistent blocking with all other jobs * switched ImagesCategoryItem to AbstractCloudElementJob to have consistent blocking with all other jobs * switched ImageViewLabelAndContentProvider to AbstractCloudElementJob to have consistent blocking with all other jobs * switched InstanceViewLabelAndContentProvider to AbstractCloudElementJob to have consistent blocking with all other jobs * switched FindImagePage to AbstractCloudElementJob to have consistent blocking with all other jobs * switched NewInstancePage to AbstractCloudElementJob to have consistent blocking with all other jobs * switched NewInstanceWizard#WatchInstanceJob to InstanceStateJob to have consistent blocking with all other jobs
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27429 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,15 @@
+2010-12-14  André Dietisheim  <adietish@redhat.com>
+
+	* src/org/jboss/tools/deltacloud/core/job/InstanceSchedulingRule.java: 
+	* src/org/jboss/tools/deltacloud/core/job/InstanceStateJob.java: 
+	* src/org/jboss/tools/deltacloud/core/job/InstanceActionJob.java: 
+	[JBIDE-7594] added instance related job & scheduling rule 
+	(blocks instance jobs on same instance and superclass jobs on same cloud & element)
+	* src/org/jboss/tools/deltacloud/core/job/CloudElementSchedulingRule.java (isOnSameElement): 
+	[JBIDE-7594] corrected scheduling rule to block superclass scheduling rule on the same cloud 
+	* src/org/jboss/tools/deltacloud/core/job/AbstractCloudElementJob.java (CLOUDELEMENT): 
+	[JBIDE-7594] added scheduling element that reflects cloud properties being processed (instances, images, realms, profiles)
+
 2010-12-13  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java 
