[JBIDE-7889] * added DeltaCloudInstance#toString to facilitate debugging * changed DeltaCloudInstance#getActions to return DeltaCloudInstance#Action (and not strings)
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27442 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,5 +1,9 @@
 2010-12-14  André Dietisheim  <adietish@redhat.com>
 
+	* src/org/jboss/tools/deltacloud/core/DeltaCloudInstance.java (toString): 
+	[JBIDE-7889] added #toString to facilitate debuggin
+	* src/org/jboss/tools/deltacloud/core/DeltaCloudInstance.java (getActions): 
+	[JBIDE-7889] changed #getActions to return DeltaCloudInstance#Action (and not strings)
 	* src/org/jboss/tools/deltacloud/core/job/InstanceSchedulingRule.java: 
 	* src/org/jboss/tools/deltacloud/core/job/InstanceStateJob.java: 
 	* src/org/jboss/tools/deltacloud/core/job/InstanceActionJob.java: 
