[JBIDE-7594] * corrected scheduling rules to have correct blocking across the scheduling class hierarchy * created #createSecurePasswordStore to be able to fake store in tests * created tests for all scheduling rules
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27492 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,12 @@
+2010-12-15  André Dietisheim  <adietish@redhat.com>
+
+	* src/org/jboss/tools/deltacloud/core/job/InstanceSchedulingRule.java (isConflicting): 
+	* src/org/jboss/tools/deltacloud/core/job/CloudSchedulingRule.java (isConflicting): 
+	* src/org/jboss/tools/deltacloud/core/job/CloudElementSchedulingRule.java (isConflicting): 
+	[JBIDE-7594] corrected scheduling rules to have correct blocking across the scheduling class hierarchy
+	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java (createSecurePasswordStore): 
+	[JBIDE-7594] created #createSecurePasswordStore to be able to fake store in tests
+
 2010-12-14  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/deltacloud/core/client/DeltaCloudClientImpl.java (updateInstance): 
