[JBIDE-7912] * replaced custom WatchCreateJob and replaced with InstanceStateJob to have consistent scheduling across jobs in the client * removed job related methods in DeltaCloud since job concurrency is dealt with job scheduling rules now
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27514 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,5 +1,10 @@
 2010-12-15  André Dietisheim  <adietish@redhat.com>
 
+	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java 
+	(getInstanceJob):
+	(waitWhilePending): 
+	(registerInstanceJob):
+	[JBIDE-7912] removed since job concurrency is dealt with job scheduling rules now 
 	* src/org/jboss/tools/deltacloud/core/job/InstanceSchedulingRule.java (isConflicting): 
 	* src/org/jboss/tools/deltacloud/core/job/CloudSchedulingRule.java (isConflicting): 
 	* src/org/jboss/tools/deltacloud/core/job/CloudElementSchedulingRule.java (isConflicting): 
