[JBIDE-7864] * DeltaCloud: replaced cloud type strings by Driver enum * removing references to DeltaCloudClient#DeltaCloudServerType, replacing by DeltaCloud#Type
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27525 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,6 +1,9 @@
 2010-12-15  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java 
+	(Driver): 
+	[JBIDE-7864] replacing cloud type strings by Driver enum
+	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java 
 	(getInstanceJob):
 	(waitWhilePending): 
 	(registerInstanceJob):
