--- a/usage/plugins/org.jboss.tools.usage/OSGI-INF/l10n/bundle.properties
+++ b/usage/plugins/org.jboss.tools.usage/OSGI-INF/l10n/bundle.properties
@@ -1,4 +1,4 @@
 #Properties file for org.jboss.tools.usage
-page.name = Usage Reporting Preferences
+page.name = Usage Reporting
 bundle-name = JBoss Tools Usage Reporting
 bundle-vendor = JBoss by Red Hat
