[JBDS-1453] changed message displayed in usage-repoting-enablement dialog
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27580 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/usage/plugins/org.jboss.tools.usage/src/org/jboss/tools/usage/internal/branding/messages.properties
+++ b/usage/plugins/org.jboss.tools.usage/src/org/jboss/tools/usage/internal/branding/messages.properties
@@ -2,7 +2,7 @@ UsageReportPreferencePage_Description=Preference page with options for anonymous
 UsageReportPreferencePage_AllowReporting=&Please allow the JBoss Tools team to receive anonymous usage\n statistics for this Eclipse installation with JBoss Tools.
 
 UsageReport_DialogTitle=JBoss Tools Usage
-UsageReport_DialogMessage=Please allow JBoss Tools team to receive anonymous usage statistics for this Eclipse instance with JBoss Tools (<a>info</a>).
+UsageReport_DialogMessage=Will you allow JBoss Tools team to receive anonymous usage statistics for this Eclipse instance with JBoss Tools (<a>info</a>)?
 UsageReport_GoogleAnalytics_Account=UA-17645367-1
 UsageReport_Checkbox_Text=Report usage of JBoss Tools to JBoss Tools team.
 UsageReport_HostName=jboss.org
