[JBIDE-7750] corrected strings (usage-hit, product-owner)
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27582 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/usage/plugins/org.jboss.tools.usage/src/org/jboss/tools/usage/internal/preferences/messages.properties
+++ b/usage/plugins/org.jboss.tools.usage/src/org/jboss/tools/usage/internal/preferences/messages.properties
@@ -1,16 +1,16 @@
 UsageReportPreferencePage_ReportedValues=Reported Values
-UsageReportPreferencePage_CurrentUsageHit=Current usage-hit\: 
-UsageReportPreferencePage_FirstUsageHit=First usage-hit\: 
+UsageReportPreferencePage_CurrentUsageHit=Current usage reported on\: 
+UsageReportPreferencePage_FirstUsageHit=First usage reported on\: 
 UsageReportPreferencePage_JBossToolsComponents=JBoss Tools Components\: 
 UsageReportPreferencePage_JBossToolsVersion=JBoss Tools Version\: 
-UsageReportPreferencePage_LastUsageHit=Last usage-hit\: 
+UsageReportPreferencePage_LastUsageHit=Last usage reported on\: 
 UsageReportPreferencePage_Locale=Locale\: 
 UsageReportPreferencePage_NumberOfUsageHits=Number of usage-hits\: 
 UsageReportPreferencePage_OperatingSystem=Operating system\: 
 UsageReportPreferencePage_OperatingSystemVersion=Operating system version\: 
 UsageReportPreferencePage_LinuxDistro=Linux Distro\: 
 UsageReportPreferencePage_ProductId=Product id\: 
-UsageReportPreferencePage_ProductOwner=Product owner\: 
+UsageReportPreferencePage_ProductOwner=Report owner\: 
 UsageReportPreferencePage_ProductVersion=Product version\: 
 UsageReportPreferencePage_ScreenColors=Screen Colors\: 
 UsageReportPreferencePage_ScreenResolution=Screen Resolution\: 
