[JBIDE-7750] corrected strings (product id -> Eclipse product, product version -> Eclipse product version)
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27583 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/usage/plugins/org.jboss.tools.usage/src/org/jboss/tools/usage/internal/preferences/messages.properties
+++ b/usage/plugins/org.jboss.tools.usage/src/org/jboss/tools/usage/internal/preferences/messages.properties
@@ -9,9 +9,9 @@ UsageReportPreferencePage_NumberOfUsageHits=Number of usage-hits\:
 UsageReportPreferencePage_OperatingSystem=Operating system\: 
 UsageReportPreferencePage_OperatingSystemVersion=Operating system version\: 
 UsageReportPreferencePage_LinuxDistro=Linux Distro\: 
-UsageReportPreferencePage_ProductId=Product id\: 
+UsageReportPreferencePage_ProductId=Eclipse product\: 
 UsageReportPreferencePage_ProductOwner=Report owner\: 
-UsageReportPreferencePage_ProductVersion=Product version\: 
+UsageReportPreferencePage_ProductVersion=Eclipse product version\: 
 UsageReportPreferencePage_ScreenColors=Screen Colors\: 
 UsageReportPreferencePage_ScreenResolution=Screen Resolution\: 
 UsageReportPreferencePage_Error_Saving=Could not save usage reporting preferences
