[JBIDE-7371] implementing key related methods in the DeltaCloudClient (created a method that returns a key instance compared to a string as it was before). Implementing tests for it.
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27593 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-17  André Dietisheim  <adietish@redhat.com>
+
+	* src/org/jboss/tools/deltacloud/core/client/DeltaCloudClientImpl.java (createKey): 
+	[JBIDE-7371] added #createKey method that now returns a key instance
+
 2010-12-16  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/deltacloud/core/client/request/ListKeysRequest.java: 
