https://issues.jboss.org/browse/JBIDE-7782
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27643 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/smooks/plugins/org.jboss.tools.smooks.ui/src/org/jboss/tools/smooks/launch/messages.properties
+++ b/smooks/plugins/org.jboss.tools.smooks.ui/src/org/jboss/tools/smooks/launch/messages.properties
@@ -5,6 +5,7 @@ SmooksLaunchConfigurationDelegate_Error_launching=Error Launching Smooks Configu
 SmooksLaunchConfigurationDelegate_Error_missing_artifact=This configuration depends on the '
 SmooksLaunchConfigurationDelegate_Error_missing_artifact2=' Smooks artifact.  Download Smooks and add the Smooks jars to the Project classpath, or update your Maven POM to include the missing artifact.
 SmooksLaunchConfigurationDelegate_Error_Title=Error
+SmooksLaunchConfigurationDelegate_Error_Java_Unsupported=Launching of Java Input Task based configurations are not yet supported. 
 SmooksLauncher_Error_Do_Not_Support_Java_Inputs=Sorry... we don't support Java Inputs yet.
 SmooksLauncher_Templating_To_StreamResult=Stream Templating Result
 SmooksLauncher_Java_Mapping_Results=Java Mapping Results
