--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,18 @@
+2010-12-21  André Dietisheim  <adietish@redhat.com>
+
+	* src/org/jboss/tools/deltacloud/core/client/unmarshal/KeysUnmarshaller.java: 
+	* src/org/jboss/tools/deltacloud/core/client/unmarshal/KeyUnmarshaller.java: 
+	* src/org/jboss/tools/deltacloud/core/client/unmarshal/KeyActionUnmarshaller.java: 
+	* src/org/jboss/tools/deltacloud/core/client/unmarshal/AbstractDOMUnmarshaller.java: 
+	* src/org/jboss/tools/deltacloud/core/client/unmarshal/AbstractDeltaCloudObjectUnmarshaller.java: 
+	* src/org/jboss/tools/deltacloud/core/client/request/ListKeysRequest.java: 
+	* src/org/jboss/tools/deltacloud/core/client/Key.java: 
+	* src/org/jboss/tools/deltacloud/core/client/DeltaCloudClientImpl.java 
+	(createKey): 
+	(listKeys): 
+	(listKey): 
+	[JBIDE-7763][JBIDE-7371] implemented keys related methods & tests, now returning Key object
+
 2010-12-17  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/deltacloud/core/client/DeltaCloudClientImpl.java (createKey): 
