[JBIDE-7980] extracted image label construction to central class, displaying now "image name [image id]"
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27670 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,9 @@
 2010-12-22  adietisheim  <adietisheim@adietisheim-thinkpad>
 
+	* src/org/jboss/tools/deltacloud/ui/views/cloud/ImageItem.java: 
+	* src/org/jboss/tools/internal/deltacloud/ui/utils/DeltaCloudObjectLabelUtils.java (getLabel): 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstancePage.java (ImageLabel2DeltaCloudImageConverter.convert): 
+	[JBIDE-7980] extracted image label construction to central class, displaying now "image name [image id]"
 	* src/org/jboss/tools/deltacloud/ui/views/cloud/InstanceItem.java (getName): 
 	[JBIDE-7977] checking null on given name
 
