[JBIDE-7983] do not report an error if no hardware profiles are available and no profile is selected therefore.
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27678 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,8 @@
 2010-12-22  adietisheim  <adietisheim@adietisheim-thinkpad>
 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstancePage.java 
+	(bindProfileCombo): 
+	[JBIDE-7983] do not report an error if no hardware profiles are available and no profile is selected therefore.
 	* src/org/jboss/tools/deltacloud/ui/views/cloud/ImageItem.java: 
 	* src/org/jboss/tools/internal/deltacloud/ui/utils/DeltaCloudObjectLabelUtils.java (getLabel): 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstancePage.java (ImageLabel2DeltaCloudImageConverter.convert): 
