[JBIDE-7981] set filter to filter in case insensitive manner
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27682 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-22  adietisheim  <adietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/core/FieldMatcher.java (FieldMatcher): 
+	[JBIDE-7981] set filter to filter in case insensitive manner
+	 
 2010-12-21  André Dietisheim  <adietish@redhat.com>
 
 	* src/org/jboss/tools/deltacloud/core/client/unmarshal/KeysUnmarshaller.java: 
