[JBIDE-7984] added guard to avoid NPE
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27688 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,10 @@
 2010-12-22  adietisheim  <adietisheim@adietisheim-thinkpad>
 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/ProfilePage.java 
+	(setCPU): 
+	(setMemody): 
+	(setStorage): 
+	[JBIDE-7984] added guard to avoid NPE
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/FindImagePageLabelAndContentProvider.java: 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/FindImagePage.java 
 	(.doRun):
