[JBIDE-7959] added guard to avoid NPE when adding property change listener to current cloud
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27693 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,5 +1,7 @@
 2010-12-22  adietisheim  <adietisheim@adietisheim-thinkpad>
 
+	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/InstanceView.java (addPropertyChangeListener): 
+	[JBIDE-7959] added guard to avoid NPE when adding property change listener to current cloud
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/ProfilePage.java 
 	(setCPU): 
 	(setMemody): 
