--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,12 @@
+2010-12-23  adietisheim  <adietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/core/job/AbstractCloudElementJob.java (CLOUDELEMENT.KEYS): 
+	* src/org/jboss/tools/deltacloud/core/DeltaCloudKey.java: 
+	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java 
+	(createKey): 
+	(getKeys): 
+	[JBIDE-7763] added methods to DeltaCloud to get all keys and to create a key on the server
+
 2010-12-22  adietisheim  <adietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/deltacloud/core/client/DeltaCloudClientImpl.java (DeltaCloudClientImpl): 
