--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,10 @@
+2010-12-23  adietisheim  <adietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstancePage.java: 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/ManageKeysWizard.java: 
+	* src/org/jboss/tools/internal/deltacloud/ui/wizards/ManageKeysPage.java: 
+	[JBIDE-7763] revamped the whole manage keys page to deal with keys on the server (list, refresh, create, delete)
+
 2010-12-22  adietisheim  <adietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/deltacloud/ui/views/cloudelements/InstanceViewLabelAndContentProvider.java (asyncAddCloudElements): 
