[JBIDE-7763] added RSE dependencies
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27753 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.integration/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.integration/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-27  adietisheim  <adietisheim@adietisheim-thinkpad>
+
+	* META-INF/MANIFEST.MF: 
+	[JBIDE-7763] added RSE dependencies
+
 2010-12-09  André Dietisheim  <adietish@redhat.com>
 
 	* create new empty plugin
