[JBIDE-7864] added isValid property tester to offer "launch instance" on valid clouds only
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27756 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,8 @@
+2010-12-27  adietisheim  <adietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java (isValid): 
+	[JBIDE-7864] added isValid property tester to offer "launch instance" on valid clouds only
+
 2010-12-23  adietisheim  <adietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/deltacloud/core/job/AbstractCloudElementJob.java (CLOUDELEMENT.KEYS): 
