[JBIDE-7294] implementing alias support
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27846 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.core/ChangeLog
@@ -1,3 +1,11 @@
+2011-01-03  adietisheim  <adietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java (createInstance): 
+	* src/org/jboss/tools/deltacloud/core/DeltaCloudInstance.java 
+	(getAlias): 
+	(setAlias): 
+	[JBIDE-7294] implementing alias support
+	
 2010-12-27  adietisheim  <adietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/deltacloud/core/DeltaCloud.java (isValid): 
