--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/ChangeLog
@@ -1,3 +1,10 @@
+2011-01-05  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
+
+	* src/org/jboss/tools/deltacloud/ui/views/CVMessages.properties: 
+	* src/org/jboss/tools/deltacloud/ui/views/cloud/property/InstancePropertySource.java 
+	(getPropertyDescriptors): 
+	(getPropertyValue): 
+
 2011-01-04  André Dietisheim  <André Dietisheim@adietisheim-thinkpad>
 
 	* src/org/jboss/tools/internal/deltacloud/ui/wizards/NewInstancePageModel.java 
